--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}    
 
 {% block content %}
-    <h1>Hi</h1>
-    {% for quote in quotes %}
-    <div><p>{{ quote.date}} {{ quote.author }} said: <b>{{ quote.body }}</b></p></div>
-    {% endfor %}
+	<p>
+   	 	This website started out with me being catching a rather bad flu and being bored that I couldn't go out. So, obviously, I decided that it would be productive to find out how to setup a website and mailservice.
+	</p>
+	<p>
+		Feel free to poke around here.
+	</p>
 {% endblock %}
