--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -1,7 +1,87 @@
 header, section, footer, aside, nav, main, article, figure {
-    display: block;
+	display: block;
 }
 
 body {
-	background-color: gray;
+	background-color: lightgray;
+	text-align: center;
+}
+
+p {
+	text-align: justify;
+}
+
+html {
+	margin: auto;
+	width: 80%;
+}
+
+h1 {
+/* 	margin-top: 0; */
+}
+
+form {
+	background-color: white;
+	margin: 0 auto;
+	width: 400px;
+	padding: 1em;
+	border: 10 px solid #a10505;
+	border-radius: 2em;
+	text-align: center;
+}
+
+.form-group {
+	margin: 10px;
+}
+
+.form-control {
+	width: 45%;
+}
+
+button {
+	position: relative ;
+	height: 30%;
+	width: 40%;
+	font-size: 18px;
+}
+
+.file-area {
+	margin: auto;
+	width: 60%;
+	position: relative;
+	font-size: 18px;
+	}
+.file-area input[type=file] {
+	position: absolute;
+	width: 100%;
+	height: 80%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	opacity: 0;
+	cursor: pointer;
+}
+.file-area .file-dummy {
+	width: 100%;
+	padding: 15px 0px;
+	border: 2px dashed #ccc;
+	background-color: #fff;
+	text-align: center;
+	transition: background 0.3s ease-in-out;
+}
+.file-area .file-dummy .success {
+	display: none;
+}
+.file-area:hover .file-dummy {
+	border: 2px dashed #1abc9c;
+}
+.file-area input[type=file]:valid + .file-dummy {
+	border-color: #1abc9c;
+}
+.file-area input[type=file]:valid + .file-dummy .success {
+	display: inline-block;
+}
+.file-area input[type=file]:valid + .file-dummy .default {
+	display: none;
 }
